# clean_architecture_blog

./: .gitmodules  CMakeLists.txt  README.md  functional_requirements.txt
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/blog/entities/: IPostRepository.h  Post.h
lib/include/blog/infrastructure/interfaces/: Console.h  HTTPServer.h
lib/include/blog/infrastructure/repositories/: InMemoryPostRepository.h
lib/include/blog/use_cases/: AddPost.h  GetPosts.h  UseCases.h
lib/src/entities/: Post.cpp
lib/src/infrastructure/interfaces/: Console.cpp  HTTPServer.cpp
lib/src/infrastructure/repositories/: InMemoryPostRepository.cpp
lib/src/infrastructure/use_cases/: AddPost.cpp  GetPosts.cpp  UseCases.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/mocks/: IPostRepositoryMock.h
test/src/use_cases/: AddPostTest.cpp
